<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClearNativeVod</string>
    <string name="hello_world">Hello world!</string>
    <string name="actor">演员</string>
    <string name="actor_eng">Stars</string>
    <string name="director">导演</string>
    <string name="director_eng">Director</string>
    <string name="type">类型</string>
    <string name="type_eng">Type</string>
    <string name="duration">时长</string>
    <string name="duration_eng">Duration</string>
    <string name="introduce">简介</string>
    <string name="introduce_eng">Brief</string>
    <string name="dialog_title_alert">提示</string>
    <string name="dialog_button_ok">确定</string>
    <string name="dialog_button_cancel">取消</string>
    <string name="mark">¥</string>
    <string name="orderingtotal">共计:</string>
    <string name="billingtotal">总计:</string>
    <string name="channellist_num">频道列表</string>
    <string name="channellist_num_eng">Channel List</string>
    <string name="update_dialog_title">更新</string>
    <string name="update_dialog_message">当前版本:</string>
    <string name="update_dialog_message1">发现新版本:</string>
    <string name="update_dialog_message2">是否更新?</string>
    <string name="update_dialog_message3">新版本描述</string>
    <string name="update_dialog_ok">更新</string>
    <string name="update_dialog_cancel">暂不更新</string>
    <string name="update_progress_title">正在下载</string>
    <string name="update_progress_message">请稍后...</string>
    <string name="version_error">版本号未知</string>
    <string name="music_name">歌曲列表 </string>
    <string name="music_name_eng">Song List</string>
    <string name="music_singer">    歌手</string>
    <string name="music_singer_eng">Singer</string>
    <string name="music_duration">时长</string>
    <string name="auth_server">主页地址：</string>
    <string name="update_server">升级地址：</string>
    <string name="setting_url">Please input url</string>
    <string name="settings_save_buttontext">保存</string>
    <string name="system_settings_buttontext">系统设置</string>
    <string name="version_info_titletext">版本信息</string>
    <string name="version_info_code">1.1</string>
    <string name="settings">设置</string>
    <string name="app_update_alert_title">应用更新</string>
    <string name="app_update_alert_body">有最新的软件包，请下载！</string>
    <string name="app_update_alert_fail">更新失败！</string>
    <string name="soft_update">更新</string>
    <string name="cancel">取消</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消更新</string>
    <string name="ok">OK</string>
    <string name="menu_settings">Settings</string>
    <string name="room_id_title">房间号</string>
    <string name="room_id_text">0001</string>
    <string name="ip_info_title">IP地址</string>
    <string name="ip_info_text">0.0.0.0</string>
    <string name="message_title">留言消息</string>
    <string name="str_channel_not_exist">频道不存在</string>
    <string name="reboot_title">重启任务</string>
    <string name="error">出错</string>
    <string name="try_again">重试</string>
    <string name="gotv">进入直播</string>
    <string name="page_loading_please_wait">页面加载中，请稍后...</string>
    <string name="please_wait">请等待</string>
     <string name="minute">分</string>
    <string name="network_unreachable">网络不可连接！</string>
    <string name="second">秒</string>

    <string-array name="hour">
        <item>24点</item>
        <item>1点</item>
        <item>2点</item>
        <item>3点</item>
        <item>4点</item>
        <item>5点</item>
        <item>6点</item>
        <item>7点</item>
        <item>8点</item>
        <item>9点</item>
        <item>10点</item>
        <item>11点</item>
        <item>12点</item>
        <item>13点</item>
        <item>14点</item>
        <item>15点</item>
        <item>16点</item>
        <item>17点</item>
        <item>18点</item>
        <item>19点</item>
        <item>20点</item>
        <item>21点</item>
        <item>22点</item>
        <item>23点</item>
    </string-array>

    <string name="title">上海北新泾电视教育系统</string>

    <string-array name="minute">
        <item>00分</item>
        <item>01分</item>
        <item>02分</item>
        <item>03分</item>
        <item>04分</item>
        <item>05分</item>
        <item>06分</item>
        <item>07分</item>
        <item>08分</item>
        <item>09分</item>
        <item>10分</item>
        <item>11分</item>
        <item>12分</item>
        <item>13分</item>
        <item>14分</item>
        <item>15分</item>
        <item>16分</item>
        <item>17分</item>
        <item>18分</item>
        <item>19分</item>
        <item>20分</item>
        <item>21分</item>
        <item>22分</item>
        <item>23分</item>
        <item>24分</item>
        <item>25分</item>
        <item>26分</item>
        <item>27分</item>
        <item>28分</item>
        <item>29分</item>
        <item>30分</item>
        <item>31分</item>
        <item>32分</item>
        <item>33分</item>
        <item>34分</item>
        <item>35分</item>
        <item>36分</item>
        <item>37分</item>
        <item>38分</item>
        <item>39分</item>
        <item>40分</item>
        <item>41分</item>
        <item>42分</item>
        <item>43分</item>
        <item>44分</item>
        <item>45分</item>
        <item>46分</item>
        <item>47分</item>
        <item>48分</item>
        <item>49分</item>
        <item>50分</item>
        <item>51分</item>
        <item>52分</item>
        <item>53分</item>
        <item>54分</item>
        <item>55分</item>
        <item>56分</item>
        <item>57分</item>
        <item>58分</item>
        <item>59分</item>
    </string-array>

</resources>