<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/dialog_title"
            android:layout_width="502dp"
            android:layout_height="120dp"
            android:layout_marginLeft="-2dp"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/dialog_title_alert"
            android:background="@drawable/dialog_title_bg"
            android:visibility="visible"/>
        
        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1.5"
            android:minHeight="120.0dp"
            android:textSize="30sp"
            android:background="@android:color/white"
            android:padding="20dp" />
        <View
            android:layout_width="500dp"
            android:layout_height="1.0dp"
            android:background="#FFD0D0D0" />
        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="80dp"
            android:background="@drawable/dialog_bottom_bg"
            android:gravity="center"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/positivebutton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_ok_selector"
                android:gravity="center"
                android:text="@string/dialog_button_ok" />
            <Button
                android:id="@+id/negativebutton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_cancel_selector"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="@string/dialog_button_cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
