<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
       android:id="@+id/music_backgroud_image"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@drawable/background_music_view"
       android:scaleType="fitXY"
        />
      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginLeft="200dp"
       android:layout_marginRight="200dp"
       android:layout_marginTop="60dp"
       android:layout_marginBottom="80dp"
       android:orientation="vertical"
       >
       
        <LinearLayout
           android:layout_width="match_parent"
       	   android:layout_height="wrap_content"
       	   android:orientation="horizontal" >
       	 
       	   <FrameLayout 
       	     android:layout_width="wrap_content"
       		 android:layout_height="wrap_content">
       	       <ImageView
			       android:layout_width="156dp"
			       android:layout_height="186dp"
			       android:scaleType="fitXY"
			       android:src="@drawable/music_default_focus_kuang">
	            </ImageView>
       	   
	            <ImageView
	               android:id="@+id/music_album_image"
			       android:layout_width="150dp"
			       android:layout_height="180dp"
			       android:layout_marginLeft="3dp"
			       android:layout_marginTop="3dp"
			       android:scaleType="fitXY">
	            </ImageView>
            
            </FrameLayout>
            
            <LinearLayout
	           android:layout_width="wrap_content"
	       	   android:layout_height="wrap_content"
	       	   android:layout_marginTop="30dp"
	       	   android:orientation="vertical"
	       	   android:layout_marginLeft="20dp"
	       	   android:layout_gravity="bottom" >"
	       	   
               <LinearLayout
		           android:layout_width="wrap_content"
		       	   android:layout_height="wrap_content"
		       	   android:orientation="horizontal" >
		       	   
	                <ImageView
				       android:layout_width="20dp"
				       android:layout_height="20dp"
				       android:layout_marginTop="10dp"
				       android:scaleType="fitXY"
				       android:src="@drawable/music_xuanlvtubiao" />
	                <TextView 
	                   android:id="@+id/music_name_in_title"
	                   android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:layout_marginLeft="20dp"
				       android:textSize="30sp"
				       android:textColor="#ffffff"/>
	            </LinearLayout>  
    
	                
	            <LinearLayout
		           android:layout_width="wrap_content"
		       	   android:layout_height="wrap_content" 
		       	   android:layout_marginTop="10dp" 
		       	   android:orientation="horizontal">
				    <ImageView
				       android:layout_width="20dp"
				       android:layout_height="20dp"
				       android:layout_marginTop="10dp"
				       android:scaleType="fitXY"
				       android:src="@drawable/music_samll_icon" />
				    <TextView 
	                   android:id="@+id/music_singer_in_title"
	                   android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:layout_marginLeft="20dp"
				       android:textSize="25sp"
				       android:textColor="#ffffff"/>
				</LinearLayout>   
				   
				<LinearLayout
		           android:layout_width="wrap_content"
		       	   android:layout_height="wrap_content" 
		       	   android:layout_marginTop="10dp"
		       	   android:orientation="horizontal" >  
				    <ImageView
				       android:layout_width="20dp"
				       android:layout_height="20dp"
				       android:layout_marginTop="10dp"
				       android:scaleType="fitXY"
				       android:src="@drawable/music_quanquan" />
				    <TextView 
	                   android:id="@+id/music_album_in_title"
	                   android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:layout_marginLeft="20dp"
				       android:textSize="25sp"
				       android:textColor="#ffffff"/>  
				</LinearLayout>   
             </LinearLayout>    
        </LinearLayout>
        
        <FrameLayout
            android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginTop="30dp"
		    android:layout_marginBottom="10dp" >
           
            <ImageView
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:scaleType="fitXY"
	        	android:src="@drawable/sub_icon_shuiwu" />
            
            <LinearLayout
		        android:layout_width="match_parent"
		    	android:layout_height="match_parent"
		    	android:orientation="horizontal">
				
                <TextView
                android:id="@+id/music_name_and_count"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textSize="25sp"
		    	android:layout_marginLeft="130dp"
		    	android:gravity="right"
		    	android:textColor="#ffffff" 
		    	android:text="@string/music_name" />"
                
				<TextView
				android:id="@+id/music_singer_list"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textSize="25sp"
		    	android:layout_marginLeft="220dp"
		    	android:gravity="right"
		    	android:textColor="#ffffff"
		    	android:visibility="gone"
		    	android:text="@string/music_singer"/>
				
				<TextView
				android:id="@+id/music_duration_list"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textSize="25sp"
		    	android:layout_gravity="right"
		    	android:layout_marginRight="20dp"
		    	android:textColor="#ffffff"
		    	android:text="@string/music_duration"/>
            </LinearLayout>
            
            <ImageView 
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_marginLeft="15dp"
			    android:layout_marginRight="15dp"
			    android:layout_marginTop="48dp"
			    android:layout_marginBottom="1dp"
			    android:scaleType="fitXY"
			    android:src="@drawable/ordering_detail_line"/>
            
	        <ListView
		        android:id="@+id/musicList"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_marginTop="55dp"
		        android:layout_marginBottom="10dp"
		        android:scrollbars="none"
		        android:cacheColorHint="#FFFFFF"
		        android:divider="#FFFFFF"
		        android:dividerHeight="0dp"
		        android:listSelector="@drawable/music_list_item_select"
		         />
        </FrameLayout>   
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/music_ok_button"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:visibility="visible"
	    android:layout_gravity="center_horizontal|bottom"
	    android:layout_marginBottom="30dp"
	    /> 

</FrameLayout>
